# stancomb

./: .gitignore  LICENSE  README.md  __init__.py  cauchy.py  pyproject.toml  setup.py  stancomb.py
examples/: cauchy.py  logit_probit.py
examples/vancouver_precipitation/: AR1_ARCH1.py  weatherstats_vancouver_daily.csv
stancomb/: __init__.py  mixture.py  parser.py
