[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StanComb"
version = "0.0.1"
authors = [
  { name="Ilias Karimalis", email="iliaskarimalis@outlook.com" },
]
description = "An automatic Stan model mixer"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ilias-karimalis/stancomb"
"Bug Tracker" = "https://github.com/ilias-karimalis/stancomb/issues"